--- a/html/index.html
+++ b/html/index.html
@@ -10,16 +10,18 @@
   <body>
     <!-- Use header, main, and footer elements to give semantic structure -->
     <header>
-      <h1>Simon Clement<sup>&reg;</sup></h1>
+      <h1>Iron Fist Data<sup>&reg;</sup></h1>
 
       <!-- Navigation elements -->
       <nav>
         <!-- Menu is a semantic alternative to <ul> that represents an interaction -->
         <menu>
           <li><a href="index.html">Home</a></li>
-          <li><a href="play.html">Play</a></li>
-          <li><a href="scores.html">Scores</a></li>
           <li><a href="about.html">About</a></li>
+          <br />
+          <li><a href="reyna.html">Reyna</a></li>
+          <li><a href="leroy.html">Leroy</a></li>
+          <li><a href="steve.html">Steve</a></li>
         </menu>
       </nav>
 
@@ -28,7 +30,7 @@
     </header>
 
     <main>
-      <h1>Welcome to Simon</h1>
+      <h1>Welcome to Iron Fist Data</h1>
       <form method="get" action="play.html">
         <div>
           <span>@</span>
