--- a/html/index.html
+++ b/html/index.html
@@ -49,7 +49,9 @@
       <hr />
       <span class="text-reset">Author Name(s)</span>
       <br />
-      <a href="https://github.com/webprogramming260/simon-html">GitHub</a>
+      <span class="text-reset">Ethan Goodman</span>
+      <br />
+      <a href="https://github.com/Ethan-Good/startup.git">GitHub</a>
     </footer>
   </body>
 </html>
