finished index page

--- a/html/index.html
+++ b/html/index.html
@@ -5,7 +5,7 @@
     <!-- Tell browsers not to scale the viewport automatically -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>IronFistData HTML</title>
-    <link rel="icon" href="favicon.ico" />
+    <link rel="icon" href="Icon.png" />
   </head>
   <body>
     <!-- Use header, main, and footer elements to give semantic structure -->
@@ -18,7 +18,11 @@
         <menu>
           <li><a href="index.html">Home</a></li>
           <li><a href="about.html">About</a></li>
-          <br />
+        </menu>
+      </nav>
+      <h3>Characters</h3>
+      <nav>
+        <menu>
           <li><a href="reyna.html">Reyna</a></li>
           <li><a href="leroy.html">Leroy</a></li>
           <li><a href="steve.html">Steve</a></li>
