added notation to about

--- a/html/about.html
+++ b/html/about.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>About</title>
-    <link rel="icon" href="favicon.ico" />
+    <link rel="icon" href="Icon.png" />
   </head>
   <body>
     <header>
@@ -39,6 +39,10 @@
         This is where Iron Fist Data comes in. On here you can select and Character to see what their best moves are and how to beat them.
         Additionally you can add counter play that you have found with your own character to deal with a certain move. 
       </p>
+      <hr />
+      <h2>Tekken Notation</h2>
+      <div id="picture" class="picture-box"><img width="400px" src="controller.png" alt="Controller" /></div>
+      
     </main>
 
     <footer>
