--- a/html/reyna.html
+++ b/html/reyna.html
@@ -31,11 +31,46 @@
 
       <!-- Since we don't have the ability to style we use old style HTML to give some visual formatting -->
       <hr />
+      <hr />
     </header>
 
     <main>
       <h1>Reyna</h1>
-      
+      <h3>ff2</h3>
+      <ul>
+        <li>12f mid</li>
+        <li>common approach tool</li>
+        <li>enters Sentai Stance</li>
+        <li>+5 on block**********************88</li>
+      </ul>
+      <div id="picture" class="picture-box"><img width="400px" src="ff2.png" alt="ff2" /></div>
+      <hr />
+      <h3>SEN 2</h3>
+      <ul>
+        <li>fast mid option</li>
+        <li>safe of block</li>
+        <li>can SSL to punish</li>
+      </ul>
+      <div id="picture" class="picture-box"><img width="400px" src="ff2.png" alt="SEN 2" /></div>
+      <hr />
+      <h3>SEN 3</h3>
+      <ul></ul>
+        <li>fast high</li>
+        <li>tracks left and right</li>
+        <li>+ someting on block**********************</li>
+        <li>can duck and punish</li>
+      </ul>
+      <div id="picture" class="picture-box"><img width="400px" src="ff2.png" alt="SEN 3" /></div>
+      <hr />
+      <h3>SEN 3+4</h3>
+      <ul></ul>
+        <li>best low from Sentai Stance</li>
+        <li>-15 on block</li>
+        <li>tracks left and right</li>
+      </ul>
+      <div id="picture" class="picture-box"><img width="400px" src="ff2.png" alt="SEN 3+4" /></div>
+      <hr />
+
     </main>
 
     <footer>
