added steve and leroy's moves

--- a/html/leroy.html
+++ b/html/leroy.html
@@ -36,39 +36,30 @@
 
     <main>
       <h1>Leroy</h1>
-      <h3></h3>
+      <h3>d3,2</h3>
       <ul>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
+        <li>low, high</li>
+        <li>enters Hermit stance</li>
+        <li>punish by lowblocking the low and continue crouching to go under the high</li>
       </ul>
-      <div id="picture" class="picture-box"><img width="400px" src="ff2.png" alt="" /></div>
+      <div id="picture" class="picture-box"><img width="400px" src="ff2.png" alt="d3,2" /></div>
       <hr />
-      <h3></h3>
+      <h3>HRM 3,4</h3>
       <ul>
-        <li></li>
-        <li></li>
-        <li></li>
+        <li>low, mid</li>
+        <li>best low in Hermit stance</li>
+        <li>mid is -15 on block</li>
+        <li>punish by low blocking first hit and standing block the 2nd hit</li>
       </ul>
-      <div id="picture" class="picture-box"><img width="400px" src="ff2.png" alt="" /></div>
+      <div id="picture" class="picture-box"><img width="400px" src="ff2.png" alt="HRM 3,4" /></div>
       <hr />
-      <h3></h3>
+      <h3>HRM 4,1+2</h3>
       <ul></ul>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
+        <li>mid, mid</li>
+        <li>wall splats</li>
+        <li>-14 on block************</li>
       </ul>
-      <div id="picture" class="picture-box"><img width="400px" src="ff2.png" alt="" /></div>
-      <hr />
-      <h3></h3>
-      <ul></ul>
-        <li></li>
-        <li></li>
-        <li></li>
-      </ul>
-      <div id="picture" class="picture-box"><img width="400px" src="ff2.png" alt="" /></div>
+      <div id="picture" class="picture-box"><img width="400px" src="ff2.png" alt="HRM 4,1+2" /></div>
       <hr />
 
     </main>
