--- a/html/steve.html
+++ b/html/steve.html
@@ -41,34 +41,32 @@
         <li>high tracking move</li>
         <li>enters Flicker stance</li>
         <li>+5 on block ****</li>
-        <li></li>
       </ul>
-      <div id="picture" class="picture-box"><img width="400px" src="ff2.png" alt="" /></div>
+      <div id="picture" class="picture-box"><img width="400px" src="ff2.png" alt="ub2" /></div>
       <hr />
-      <h3></h3>
+      <h3>FLK 1</h3>
       <ul>
-        <li></li>
-        <li></li>
-        <li></li>
+        <li>14f heat engeger mid</li>
+        <li>-4 on block</li>
+        <li>tracks to both sides</li>
       </ul>
-      <div id="picture" class="picture-box"><img width="400px" src="ff2.png" alt="" /></div>
+      <div id="picture" class="picture-box"><img width="400px" src="ff2.png" alt="FLK 1" /></div>
       <hr />
-      <h3></h3>
+      <h3>FLK 2</h3>
       <ul></ul>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
+        <li>mid launcher</li>
+        <li>-12 on block</li>
+        <li>can SSR to punish</li>
       </ul>
-      <div id="picture" class="picture-box"><img width="400px" src="ff2.png" alt="" /></div>
+      <div id="picture" class="picture-box"><img width="400px" src="ff2.png" alt="FLK 2" /></div>
       <hr />
-      <h3></h3>
+      <h3>FLK 1+2</h3>
       <ul></ul>
-        <li></li>
-        <li></li>
-        <li></li>
+        <li>unblockable high</li>
+        <li>can SSR and SSL to punish</li>
+        <li>can also duck and punish</li>
       </ul>
-      <div id="picture" class="picture-box"><img width="400px" src="ff2.png" alt="" /></div>
+      <div id="picture" class="picture-box"><img width="400px" src="ff2.png" alt="FLK 1+2" /></div>
       <hr />
 
     </main>
