fixed some frame data

--- a/html/reyna.html
+++ b/html/reyna.html
@@ -36,7 +36,7 @@
         <li>12f mid</li>
         <li>common approach tool</li>
         <li>enters Sentai Stance</li>
-        <li>+5 on block**********************88</li>
+        <li>+2 on block</li>
       </ul>
       <div id="picture" class="picture-box"><img width="400px" src="ff2.png" alt="ff2" /></div>
       <hr />
@@ -52,7 +52,7 @@
       <ul></ul>
         <li>fast high</li>
         <li>tracks left and right</li>
-        <li>+ someting on block**********************</li>
+        <li>+1 on block</li>
         <li>can duck and punish</li>
       </ul>
       <div id="picture" class="picture-box"><img width="400px" src="ff2.png" alt="SEN 3" /></div>
