--- a/html/steve.html
+++ b/html/steve.html
@@ -35,7 +35,7 @@
       <ul>
         <li>high tracking move</li>
         <li>enters Flicker stance</li>
-        <li>+5 on block ****</li>
+        <li>+3 on block</li>
       </ul>
       <div id="picture" class="picture-box"><img width="400px" src="ff2.png" alt="ub2" /></div>
       <hr />
