--- a/html/steve.html
+++ b/html/steve.html
@@ -34,12 +34,12 @@
       <h3>ub2</h3>
       <ul>
         <li>high tracking move</li>
-        <li>enters Flicker stance</li>
+        <li>enters Lion Heart stance</li>
         <li>+3 on block</li>
       </ul>
       <div id="picture" class="picture-box"><img width="400px" src="Character Images/Steve/ub2.png" alt="ub2" /></div>
       <hr />
-      <h3>FLK 1</h3>
+      <h3>LNH 1</h3>
       <ul>
         <li>14f heat engeger mid</li>
         <li>-4 on block</li>
@@ -47,7 +47,7 @@
       </ul>
       <div id="picture" class="picture-box"><img width="400px" src="Character Images/Steve/LNH1.png" alt="LNH 1" /></div>
       <hr />
-      <h3>FLK 2</h3>
+      <h3>LNH 2</h3>
       <ul></ul>
         <li>mid launcher</li>
         <li>-12 on block</li>
@@ -55,7 +55,7 @@
       </ul>
       <div id="picture" class="picture-box"><img width="400px" src="Character Images/Steve/LNH2.png" alt="LNH 2" /></div>
       <hr />
-      <h3>FLK 1+2</h3>
+      <h3>LNH 1+2</h3>
       <ul></ul>
         <li>unblockable high</li>
         <li>can SSR and SSL to punish</li>
