--- a/html/index.html
+++ b/html/index.html
@@ -9,7 +9,7 @@
   <body>
 
     <header>
-      <h1>Iron Fist Data<sup>&reg;</sup></h1>
+      <h1>Iron Fist Data</h1>
 
       <nav>
         <menu>
