--- a/html/about.html
+++ b/html/about.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <header>
-      <h1>Simon<sup>&reg;</sup></h1>
+      <h1>Iron Fist Data</h1>
 
       <nav></nav>
         <menu>
