--- a/html/steve.html
+++ b/html/steve.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <header>
-      <h1>Iron Fist Data<sup>&reg;</sup></h1>
+      <h1>Iron Fist Data</h1>
 
       <nav>
         <menu>
