fixed more typos

--- a/html/reyna.html
+++ b/html/reyna.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>IronFistData HTML</title>
+    <title>Reyna</title>
     <link rel="icon" href="Icon.png" />
   </head>
   <body>
@@ -38,7 +38,7 @@
         <li>enters Sentai Stance</li>
         <li>+2 on block</li>
       </ul>
-      <div id="picture" class="picture-box"><img width="400px" src="Character Images/Reyna/ff2.png" alt="ff2" /></div>
+      <div id="picture" class="picture-box"><img width="400px" src="ff2.png" alt="ff2" /></div>
       <hr />
       <h3>SEN 2</h3>
       <ul>
