--- a/html/steve.html
+++ b/html/steve.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>IronFistData HTML</title>
+    <title>Steve</title>
     <link rel="icon" href="Icon.png" />
   </head>
   <body>
