--- a/html/reyna.html
+++ b/html/reyna.html
@@ -46,7 +46,7 @@
         <li>safe of block</li>
         <li>can SSL to punish</li>
       </ul>
-      <div id="picture" class="picture-box"><img width="400px" src="Character Images/Reyna/SEN2.png" alt="SEN 2" /></div>
+      <div id="picture" class="picture-box"><img width="400px" src="Character Images/Reyna/SEN2.PNG" alt="SEN 2" /></div>
       <hr />
       <h3>SEN 3</h3>
       <ul></ul>
