--- a/html/leroy.html
+++ b/html/leroy.html
@@ -37,8 +37,8 @@
         <li>enters Hermit stance</li>
         <li>punish by lowblocking the low and continue crouching to go under the high</li>
       </ul>
-      <div id="picture" class="picture-box"><img width="400px" src="Character Images/Leroy/d3.png" alt="d3" /></div>
-      <div id="picture" class="picture-box"><img width="400px" src="Character Images/Leroy/d3,2.png" alt="d3,2" /></div>
+      <div id="picture" class="picture-box"><img width="400px" src="Character Images/Leroy/d3.PNG" alt="d3" /></div>
+      <div id="picture" class="picture-box"><img width="400px" src="Character Images/Leroy/d3,2.PNG" alt="d3,2" /></div>
       <hr />
       <h3>HRM 3,4</h3>
       <ul>
@@ -47,8 +47,8 @@
         <li>mid is -15 on block</li>
         <li>punish by low blocking first hit and standing block the 2nd hit</li>
       </ul>
-      <div id="picture" class="picture-box"><img width="400px" src="Character Images/Leroy/HRM3.png" alt="HRM 3" /></div>
-      <div id="picture" class="picture-box"><img width="400px" src="Character Images/Leroy/HRM3,4.png" alt="HRM 3,4" /></div>
+      <div id="picture" class="picture-box"><img width="400px" src="Character Images/Leroy/HRM3.PNG" alt="HRM 3" /></div>
+      <div id="picture" class="picture-box"><img width="400px" src="Character Images/Leroy/HRM3,4.PNG" alt="HRM 3,4" /></div>
 
       <hr />
       <h3>HRM 4,1+2</h3>
@@ -57,8 +57,8 @@
         <li>wall splats</li>
         <li>-14 on block************</li>
       </ul>
-      <div id="picture" class="picture-box"><img width="400px" src="Character Images/Leroy/HRM4.png" alt="HRM 4" /></div>
-      <div id="picture" class="picture-box"><img width="400px" src="Character Images/Leroy/HRM4,1+2.png" alt="HRM 4,1+2" /></div>
+      <div id="picture" class="picture-box"><img width="400px" src="Character Images/Leroy/HRM4.PNG" alt="HRM 4" /></div>
+      <div id="picture" class="picture-box"><img width="400px" src="Character Images/Leroy/HRM4,1+2.PNG" alt="HRM 4,1+2" /></div>
       <hr />    
 
     </main>
