--- a/html/reyna.html
+++ b/html/reyna.html
@@ -38,7 +38,7 @@
         <li>enters Sentai Stance</li>
         <li>+2 on block</li>
       </ul>
-      <div id="picture" class="picture-box"><img width="400px" src="ff2.png" alt="ff2" /></div>
+      <div id="picture" class="picture-box"><img width="400px" src="Character Images/Reyna/ff2.PNG" alt="ff2" /></div>
       <hr />
       <h3>SEN 2</h3>
       <ul>
@@ -55,7 +55,7 @@
         <li>+1 on block</li>
         <li>can duck and punish</li>
       </ul>
-      <div id="picture" class="picture-box"><img width="400px" src="Character Images/Reyna/SEN3.png" alt="SEN 3" /></div>
+      <div id="picture" class="picture-box"><img width="400px" src="Character Images/Reyna/SEN3.PNG" alt="SEN 3" /></div>
       <hr />
       <h3>SEN 3+4</h3>
       <ul></ul>
@@ -63,7 +63,7 @@
         <li>-15 on block</li>
         <li>tracks left and right</li>
       </ul>
-      <div id="picture" class="picture-box"><img width="400px" src="Character Images/Reyna/SEN3+4.png" alt="SEN 3+4" /></div>
+      <div id="picture" class="picture-box"><img width="400px" src="Character Images/Reyna/SEN3+4.PNG" alt="SEN 3+4" /></div>
       <hr />
 
     </main>
