--- a/html/steve.html
+++ b/html/steve.html
@@ -37,7 +37,7 @@
         <li>enters Lion Heart stance</li>
         <li>+3 on block</li>
       </ul>
-      <div id="picture" class="picture-box"><img width="400px" src="Character Images/Steve/ub2.png" alt="ub2" /></div>
+      <div id="picture" class="picture-box"><img width="400px" src="Character Images/Steve/ub2.PNG" alt="ub2" /></div>
       <hr />
       <h3>LNH 1</h3>
       <ul>
@@ -45,7 +45,7 @@
         <li>-4 on block</li>
         <li>tracks to both sides</li>
       </ul>
-      <div id="picture" class="picture-box"><img width="400px" src="Character Images/Steve/LNH1.png" alt="LNH 1" /></div>
+      <div id="picture" class="picture-box"><img width="400px" src="Character Images/Steve/LNH1.PNG" alt="LNH 1" /></div>
       <hr />
       <h3>LNH 2</h3>
       <ul></ul>
@@ -53,7 +53,7 @@
         <li>-12 on block</li>
         <li>can SSR to punish</li>
       </ul>
-      <div id="picture" class="picture-box"><img width="400px" src="Character Images/Steve/LNH2.png" alt="LNH 2" /></div>
+      <div id="picture" class="picture-box"><img width="400px" src="Character Images/Steve/LNH2.PNG" alt="LNH 2" /></div>
       <hr />
       <h3>LNH 1+2</h3>
       <ul></ul>
@@ -61,7 +61,7 @@
         <li>can SSR and SSL to punish</li>
         <li>can also duck and punish</li>
       </ul>
-      <div id="picture" class="picture-box"><img width="400px" src="Character Images/Steve/LNH1+2.png" alt="LNH 1+2" /></div>
+      <div id="picture" class="picture-box"><img width="400px" src="Character Images/Steve/LNH1+2.PNG" alt="LNH 1+2" /></div>
       <hr />
 
     </main>
