--- a/html/about.html
+++ b/html/about.html
@@ -35,7 +35,7 @@
       </p>
 
       <p>
-        This is where Iron Fist Data comes in. On here you can select and Character to see what their best moves are and how to beat them.
+        This is where Iron Fist Data comes in. On here you can select a character to see what their best moves are and how to beat them.
         Additionally you can add counter play that you have found with your own character to deal with a certain move. 
       </p>
       <hr />
