--- a/html/leroy.html
+++ b/html/leroy.html
@@ -55,7 +55,7 @@
       <ul></ul>
         <li>mid, mid</li>
         <li>wall splats</li>
-        <li>-14 on block************</li>
+        <li>-14 on block</li>
       </ul>
       <div id="picture" class="picture-box"><img width="400px" src="Character Images/Leroy/HRM4.PNG" alt="HRM 4" /></div>
       <div id="picture" class="picture-box"><img width="400px" src="Character Images/Leroy/HRM4,1+2.PNG" alt="HRM 4,1+2" /></div>
