--- a/CSS/index.html
+++ b/CSS/index.html
@@ -5,7 +5,7 @@
     <!-- Tell browsers not to scale the viewport automatically -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>IronFistData</title>
-    <link rel="icon" href="icon.ico" />
+    <link rel="icon" href="icon.png" />
 
     <link rel="stylesheet" href="main.css" />
 
