--- a/CSS/index.html
+++ b/CSS/index.html
@@ -29,13 +29,7 @@
             <a class="nav-link" href="about.html">About</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="leroy.html">Leroy</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="reyna.html">Reyna</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="steve.html">Steve</a>
+            <a class="nav-link" href="characters.html">Characters</a>
           </li>
         </menu>
       </nav>
