--- a/CSS/about.html
+++ b/CSS/about.html
@@ -2,101 +2,42 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <!-- Tell browsers not to scale the viewport automatically -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>About</title>
-    <link rel="icon" href="Icon.png" />
+    <title>IronFistData</title>
+    <link rel="icon" href="icon.png" />
+
+    <link rel="stylesheet" href="main.css" />
+
+    <!-- Include bootstrap CSS framework -->
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi"
+      crossorigin="anonymous"
+    />
   </head>
-  <body>
-    <header>
-      <h1>Iron Fist Data</h1>
-
-      <nav></nav>
-        <menu>
-          <li><a href="index.html">Home</a></li>
-          <li><a href="about.html">About</a></li>
+  <body class="bg-dark text-light">
+    <header class="container-fluid">
+      <nav class="navbar fixed-top navbar-dark">
+        <a class="navbar-brand" href="#">Iron Fist Data</a>
+        <menu class="navbar-nav">
+          <li class="nav-item">
+            <a class="nav-link" href="index.html">Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="about.html">About</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link active" href="characters.html">Characters</a>
+          </li>
         </menu>
       </nav>
-      <h3>Characters</h3>
-      <nav>
-        <menu>
-          <li><a href="reyna.html">Reyna</a></li>
-          <li><a href="leroy.html">Leroy</a></li>
-          <li><a href="steve.html">Steve</a></li>
-        </menu>
-      </nav>
-
-      <hr />
     </header>
 
-    <main>
-      <p>
-        Tekken is one of the most difficult fighting games to learn. Each of the 30+ characters have more than 100 different moves,
-        some even having 200. For a new player this amount of moves can be incredibly overwelming.
-      </p>
+    <main class="container-fluid bg-secondary text-center">
 
-      <p>
-        This is where Iron Fist Data comes in. On here you can select a character to see what their best moves are and how to beat them.
-        Additionally you can add counter play that you have found with your own character to deal with a certain move. 
-      </p>
-      <hr />
-      <h2>Tekken Notation</h2>
-      <div id="picture" class="picture-box"><img width="400px" src="controller.png" alt="Controller" /></div>
-      <h3>Additional Notation</h3>
-      <table>
-        <tr>
-          <th>Notation</th>
-          <th>Meaning</th>
-        </tr>
-        <tr>
-          <td>T!</td>
-          <td>Tornado</td>
-        </tr>
-        <tr>
-          <td>WS</td>
-          <td>While Standing</td>
-        </tr>
-        <tr>
-            <td>WR</td>
-            <td>While Running</td>
-        </tr>
-        <tr>
-            <td>SSR</td>
-            <td>Side Step Right</td>
-        </tr>
-        <tr>
-            <td>SSL</td>
-            <td>Side Step Left</td>
-        </tr>
-        <tr>
-            <td>CH</td>
-            <td>Counter Hit</td>
-        </tr>
-        <tr>
-            <td>FC</td>
-            <td>Fully Crouched</td>
-        </tr>
-        <tr>
-            <td>+</td>
-            <td>Press Together (1+2)</td>
-        </tr>
-        <tr>
-            <td>QCF</td>
-            <td>Quarter Circle Forward (d,df,f)</td>
-        </tr>
-        <tr>
-            <td>QCB</td>
-            <td>Quarter Circle Back (d,db,b)</td>
-        </tr>
-      </table>
+
     </main>
-
-    <footer>
-        <hr />
-        <span class="text-reset">Author Name(s)</span>
-        <br />
-        <span class="text-reset">Ethan Goodman</span>
-        <br />
-        <a href="https://github.com/Ethan-Good/startup.git">GitHub</a>
-    </footer>
   </body>
 </html>
