--- a/CSS/index.html
+++ b/CSS/index.html
@@ -38,7 +38,7 @@
     <main class="container-fluid bg-secondary text-center">
       <div>
         <h1>Welcome to Iron Fist Data</h1>
-        <form method="get" action="play.html">
+        <form method="get">
           <div class="input-group mb-3">
             <span class="input-group-text">@</span>
             <input class="form-control" type="text" placeholder="your@email.com" />
