--- a/CSS/about.html
+++ b/CSS/about.html
@@ -26,10 +26,10 @@
             <a class="nav-link" href="index.html">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="about.html">About</a>
+            <a class="nav-link active" href="about.html">About</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link active" href="characters.html">Characters</a>
+            <a class="nav-link" href="characters.html">Characters</a>
           </li>
         </menu>
       </nav>
