added footer to every page

--- a/CSS/about.html
+++ b/CSS/about.html
@@ -7,7 +7,7 @@
     <title>IronFistData</title>
     <link rel="icon" href="icon.png" />
 
-    <link rel="stylesheet" href="main.css" />
+    <link rel="stylesheet" href="about.css" />
 
     <!-- Include bootstrap CSS framework -->
     <link
@@ -37,7 +37,15 @@
 
     <main class="container-fluid bg-secondary text-center">
 
-
     </main>
+
+    <footer class="bg-dark text-white-50">
+      <div class="container-fluid">
+        <span class="text-reset">Author Name:</span>
+        <span class="text-reset">Ethan Goodman</span>
+        <a class="text-reset" href="https://github.com/Ethan-Good/startup.git">GitHub</a>
+      </div>
+    </footer>
+
   </body>
 </html>
