added accordian to characters page

--- a/CSS/index.html
+++ b/CSS/index.html
@@ -17,7 +17,7 @@
       crossorigin="anonymous"
     />
   </head>
-  <body class="bg-dark text-light">
+  <body class="bg-primary text-light">
     <header class="container-fluid">
       <nav class="navbar fixed-top navbar-dark">
         <a class="navbar-brand" href="#">Iron Fist Data</a>
@@ -35,7 +35,7 @@
       </nav>
     </header>
 
-    <main class="container-fluid bg-secondary text-center">
+    <main class="container-fluid bg-dark text-center">
       <div>
         <h1>Welcome to Iron Fist Data</h1>
         <form method="get">
@@ -53,7 +53,7 @@
       </div>
     </main>
 
-    <footer class="bg-dark text-white-50">
+    <footer class="bg-primary text-white-50">
       <div class="container-fluid">
         <span class="text-reset">Author Name:</span>
         <span class="text-reset">Ethan Goodman</span>
