--- a/CSS/characters.html
+++ b/CSS/characters.html
@@ -19,7 +19,7 @@
   </head>
   <body class="bg-dark text-light">
     <header class="container-fluid">
-      <nav class="navbar fixed-top navbar-dark">
+      <nav class="navbar sticky-top navbar-dark">
         <a class="navbar-brand" href="#">Iron Fist Data</a>
         <menu class="navbar-nav">
           <li class="nav-item">
@@ -46,15 +46,30 @@
                 </h2>
                 <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
                   <div class="accordion-body">
+                    <div id="picture" class="picture-box"><img width="400px" height="400px" src="Character Images/Leroy/d3,2.PNG" alt="d3,2" id="picture" class="picture-box"><img width="400px" height="400px" style="margin-right: 10px" src="Character Images/Leroy/d3.PNG" alt="d3" /></div>
                     <h3>d3,2</h3>
-                        <ul>
-                            <li>low, high</li>
-                            <li>enters Hermit stance</li>
-                            <li>punish by lowblocking the low and continue crouching to go under the high</li>
-                        </ul>
-                        <div id="picture" class="picture-box"><img width="400px" src="Character Images/Leroy/d3.PNG" alt="d3" /></div>
-                        <div id="picture" class="picture-box2"><img width="400px" src="Character Images/Leroy/d3,2.PNG" alt="d3,2" /></div>
-                  </div>
+                    <ul>
+                        <li>low, high</li>
+                        <li>enters Hermit stance</li>
+                        <li>punish by lowblocking the low and continue crouching to go under the high</li>
+                    </ul>
+                    <br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+                    <div id="picture" class="picture-box"><img width="400px" height="400px" src="Character Images/Leroy/HRM3,4.PNG" alt="HRM3,4" id="picture" class="picture-box"><img width="400px" height="400px" style="margin-right: 10px" src="Character Images/Leroy/HRM3.PNG" alt="HRM3" /></div>
+                    <h3>HRM 3,4</h3>
+                    <ul>
+                        <li>low, mid</li>
+                        <li>best low in Hermit stance</li>
+                        <li>mid is -15 on block</li>
+                        <li>punish by low blocking first hit and standing block the 2nd hit</li>
+                    </ul>
+                    <br><br><br><br><br><br><br><br><br><br><br><br><br>
+                    <div id="picture" class="picture-box"><img width="400px" height="400px" src="Character Images/Leroy/HRM4,1+2.PNG" alt="HRM4,1+2" id="picture" class="picture-box"><img width="400px" height="400px" style="margin-right: 10px" src="Character Images/Leroy/HRM4.PNG" alt="HRM4" /></div>
+                    <h3>HRM 4,1+2</h3>
+                    <ul>
+                        <li>mid, mid</li>
+                        <li>wall splats</li>
+                        <li>-14 on block</li>
+                    </ul>    
                 </div>
               </div>
               <div class="accordion-item">
