cleaned up the characters page

--- a/CSS/characters.html
+++ b/CSS/characters.html
@@ -36,6 +36,7 @@
     </header>
 
     <main class="container-fluid bg-secondary">
+        <br>
         <div class="bd-example">
             <div class="accordion" id="accordionExample">
               <div class="accordion-item">
@@ -63,7 +64,7 @@
                         <li>punish by low blocking first hit and standing block the 2nd hit</li>
                     </ul>
                     <br><br><br><br><br><br><br><br><br><br><br><br><br>
-                    <div id="picture" class="picture-box"><img width="400px" height="400px" src="Character Images/Leroy/HRM4,1+2.PNG" alt="HRM4,1+2" id="picture" class="picture-box"><img width="400px" height="400px" style="margin-right: 10px" src="Character Images/Leroy/HRM4.PNG" alt="HRM4" /></div>
+                    <div id="picture" class="picture-box"><img width="400px" height="400px" style="margin-bottom: 20px;" src="Character Images/Leroy/HRM4,1+2.PNG" alt="HRM4,1+2" id="picture" class="picture-box"><img width="400px" height="400px" style="margin-right: 10px"  src="Character Images/Leroy/HRM4.PNG" alt="HRM4" /></div>
                     <h3>HRM 4,1+2</h3>
                     <ul>
                         <li>mid, mid</li>
@@ -72,6 +73,7 @@
                     </ul>    
                 </div>
               </div>
+
               <div class="accordion-item">
                 <h2 class="accordion-header" id="headingTwo">
                   <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="true" aria-controls="collapseTwo">
