finished about page

--- a/CSS/about.html
+++ b/CSS/about.html
@@ -17,8 +17,8 @@
       crossorigin="anonymous"
     />
   </head>
-  <body class="bg-dark text-light">
-    <header class="container-fluid">
+  <body class=" text-light">
+    <header class="container-fluid bg-dark">
       <nav class="navbar sticky-top navbar-dark">
         <a class="navbar-brand" href="#">Iron Fist Data</a>
         <menu class="navbar-nav">
@@ -37,14 +37,14 @@
 
     <main class="container-fluid bg-light text-center" >
         <br><br>
-        <div id="picture" class="picture-box"><h2>Tekken Notation</h2><img width="400px" src="controller.png" alt="Controller" /></div>
+        
         <p>
           Tekken is one of the most difficult fighting games to learn. Each of the 30+ characters have more than 100 different moves,
           some even having 200. For a new player this amount of moves can be incredibly overwelming. <strong>This is where Iron Fist Data comes in.</strong>
         </p>
         <hr />
-        
-        <br><br>
+        <div id="picture" class="picture-box"><h2>Tekken Notation</h2><img width="400px" src="controller.png" alt="Controller" /></div>
+        <br><br><br>
         <h3>Additional Notation</h3>
         <div class="divFloat">
           <table class="table table-striped">
